--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,20 +1,28 @@
 ---
 ---
 
+@misc{talk_15,
+title={The strong topological Rokhlin property and Medvedev degrees of SFTs}, 
+      year={2026},
+      month={February},
+      day={9},
+      slides={Talk_15.pdf},
+      journal={Talk for dynamics seminar at IMPAN, and thematic week "Random invariant structures" of Simons Semester "Invariant Structures in Groups, Spaces, and Algebras". Warsaw, Poland.},
+} 
 
 @misc{talk_14,
 title={Slow entropy of some skew products}, 
       year={2025},
       month={October},
       slides={Talk_14.pdf},
-      note={Talk for Budapest-Wien Dynamics Seminar, ISTA, Austria.},
+      journal={Talk for Budapest-Wien Dynamics Seminar, ISTA, Austria.},
 } 
 @misc{talk_13,
 title={Questions about ranges of RW}, 
       year={2025},
       month={September},
       slides={Talk_13.pdf},
-      note={Lightning talk at YMCN autumn school: Probability and dynamics on groups
+      journal={Lightning talk at YMCN autumn school: Probability and dynamics on groups
 22–26 September 2025, Münster, Germany},
 } 
 @misc{talk_12,
@@ -25,7 +33,7 @@ title={Topological slow entropy of some skew products},
       This talk is about a family of skew products that naturally generalize the [T,T⁻¹] system, well studied in ergodic theory. We consider the analogous construction in the topological category. These systems are built by a subshift in the base, a continuous cocycle to the integers, and an arbitrary invertible system in the fiber. We are interested in the situation where the entropy of the skew product construction is independent of the entropy of the fiber system. In this case we have a large family of systems in which the invariant of topological entropy is constant and therefore does not provide much information. The main result states that under suitable conditions, the entropy of the fiber system can be recovered as the slow entropy of the skew product with a well-chosen scale. This result provides a topological analogous of existing results in the measurable category (Heicklen, Hoffman, & Rudolph; Ball; Austin), and the main novelty is that it covers some instances zero-entropy systems in the base. 
       The talk will be based on the recent preprint https://arxiv.org/abs/2506.17932},
       slides={Talk_12.pdf},
-      note={Talk for Recurrent ETDS seminar, https://sites.google.com/view/recurrentetds/home},
+      journal={Talk for Recurrent ETDS seminar, https://sites.google.com/view/recurrentetds/home},
 } 
 @misc{talk_11,
       title={Automorphism groups of subshifts}, 
@@ -38,7 +46,7 @@ In a seminal paper from 1969 Hedlund began the study of automorphism groups of f
 A prominent open question is whether the 2-shift and 3-shift have the same automorphism groups. It is known that they can not be distinguished by their subgroups, and that the 2-shift and 4-shift have different automorphism groups. In the talk I will talk about these things and a recent work with S.Barbieri and P.Rivera-Burgos.},
       month={April},
       slides={Talk_11.pdf},
-      note={Talk for dynamics seminar, Jagiellonian University},
+      journal={Talk for dynamics seminar, Jagiellonian University},
 }
 @misc{talk_10,
       title={Medvedev degrees of subshifts}, 
@@ -51,20 +59,20 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
                   },
       month={December},
       slides={talk_10.pdf},
-      note={Talk for dynamics seminar, Jagiellonian University},
+      journal={Talk for dynamics seminar, Jagiellonian University},
 }
 @misc{talk_9,
       title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
       year={2024},
       month={May},
-      note={Talk for postgraduate school UFRO - Lican Ray},
+      journal={Talk for postgraduate school UFRO - Lican Ray},
       slides={Talk_9.pdf},
 }
 @misc{talk_8,
       title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
       year={2024},
       month={May},
-      note={Talk for CENIA seminar},
+      journal={Talk for CENIA seminar},
       slides={Talk_8.pdf},
       poster={Talk_8_poster.jpg}
 }
@@ -72,14 +80,14 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       title={A recursion-theoretic invariant for subshifts},
       year={2024},
       month={February},
-      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
+      journal={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
       slides={Talk_7.pdf},
 }
 @misc{talk_6,
       title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
       year={2024},
       month={February},
-      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
+      journal={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
       poster={Paper_3_poster.pdf}
 }
 @misc{talk_5,
@@ -87,7 +95,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       year={2023},
       month={December},
       abstract={The abstract is in the "pdf" button.},
-      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile. https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
+      journal={Encuentro sociedad matemática de chile 2023, Santiago, Chile. https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
       slides={talk_5.pdf},
       pdf={talk_5_abstract.pdf},
 }
@@ -98,7 +106,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       year={2023},
       month={September},
       abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts. },
-      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile. http://www.dynamicalsystems.cl/?page_id=286},
+      journal={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile. http://www.dynamicalsystems.cl/?page_id=286},
 }
 
 
@@ -109,7 +117,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       abstract={The abstract is in the "pdf" button},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
-      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany. http://cca-net.de/ccr2023/},
+      journal={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany. http://cca-net.de/ccr2023/},
 }
 
 
@@ -120,5 +128,5 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
-      note={Journées annuelles SDA2, Toulouse, France. https://indico.math.cnrs.fr/event/9357/},
+      journal={Journées annuelles SDA2, Toulouse, France. https://indico.math.cnrs.fr/event/9357/},
 }
