--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@misc{talk_15,
+@article{talk_15,
 title={The strong topological Rokhlin property and Medvedev degrees of SFTs}, 
       year={2026},
       month={February},
@@ -10,14 +10,14 @@ title={The strong topological Rokhlin property and Medvedev degrees of SFTs},
       journal={Talk for dynamics seminar at IMPAN, and thematic week "Random invariant structures" of Simons Semester "Invariant Structures in Groups, Spaces, and Algebras". Warsaw, Poland.},
 } 
 
-@misc{talk_14,
+@article{talk_14,
 title={Slow entropy of some skew products}, 
       year={2025},
       month={October},
       slides={Talk_14.pdf},
       journal={Talk for Budapest-Wien Dynamics Seminar, ISTA, Austria.},
 } 
-@misc{talk_13,
+@article{talk_13,
 title={Questions about ranges of RW}, 
       year={2025},
       month={September},
@@ -25,7 +25,7 @@ title={Questions about ranges of RW},
       journal={Lightning talk at YMCN autumn school: Probability and dynamics on groups
 22–26 September 2025, Münster, Germany},
 } 
-@misc{talk_12,
+@article{talk_12,
 title={Topological slow entropy of some skew products}, 
       year={2025},
       month={August},
@@ -35,7 +35,7 @@ title={Topological slow entropy of some skew products},
       slides={Talk_12.pdf},
       journal={Talk for Recurrent ETDS seminar, https://sites.google.com/view/recurrentetds/home},
 } 
-@misc{talk_11,
+@article{talk_11,
       title={Automorphism groups of subshifts}, 
       year={2025},
       abstract={
@@ -48,7 +48,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       slides={Talk_11.pdf},
       journal={Talk for dynamics seminar, Jagiellonian University},
 }
-@misc{talk_10,
+@article{talk_10,
       title={Medvedev degrees of subshifts}, 
       year={2024},
       abstract={The Medvedev degree of a subshift is an invariant of topological conjugacy that measures how hard is to find configurations in the subshift from the viewpoint of recursion theory. These degrees share some properties with topological entropy for amenable groups, such as being non-increasing by factor maps, and having a simple behavior for direct products and disjoint  unions.
@@ -61,14 +61,14 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       slides={talk_10.pdf},
       journal={Talk for dynamics seminar, Jagiellonian University},
 }
-@misc{talk_9,
+@article{talk_9,
       title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
       year={2024},
       month={May},
       journal={Talk for postgraduate school UFRO - Lican Ray},
       slides={Talk_9.pdf},
 }
-@misc{talk_8,
+@article{talk_8,
       title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
       year={2024},
       month={May},
@@ -76,21 +76,21 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       slides={Talk_8.pdf},
       poster={Talk_8_poster.jpg}
 }
-@misc{talk_7,
+@article{talk_7,
       title={A recursion-theoretic invariant for subshifts},
       year={2024},
       month={February},
       journal={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
       slides={Talk_7.pdf},
 }
-@misc{talk_6,
+@article{talk_6,
       title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
       year={2024},
       month={February},
       journal={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
       poster={Paper_3_poster.pdf}
 }
-@misc{talk_5,
+@article{talk_5,
       title={Un invariante para subshifts de naturaleza recursiva}, 
       year={2023},
       month={December},
@@ -101,7 +101,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
 }
 
 
-@misc{talk_4,
+@article{talk_4,
       title={Un invariante para subshifts de naturaleza recursiva}, 
       year={2023},
       month={September},
@@ -110,7 +110,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
 }
 
 
-@misc{talk_3,
+@article{talk_3,
       title={Medvedev degrees and subshifts},
       year={2023},
       month={July},
@@ -121,7 +121,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
 }
 
 
-@misc{talk_2,
+@article{talk_2,
       title={Medvedev degrees of effective subshifts on groups}, 
       year={2023},
       month={March},
