Fix case of slides filename in talks.bib
Updated the filename case for slides in talks.bib.

--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -6,7 +6,7 @@ title={The strong topological Rokhlin property and Medvedev degrees of SFTs},
       year={2026},
       month={February},
       day={9},
-      slides={Talk_15.pdf},
+      slides={talk_15.pdf},
       journal={Talk for dynamics seminar at IMPAN, and thematic week "Random invariant structures" of Simons Semester "Invariant Structures in Groups, Spaces, and Algebras". Warsaw, Poland.},
 } 
 
