--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,10 +50,14 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
 }
 
 @article{carrascovargas2024complexityeulerianpathproblem,
-      title={On the complexity of the Eulerian path problem for infinite graphs}, 
+      title={Paths, ends and the separation problem for infinite graphs}, 
       author={Nicanor Carrasco-Vargas and Valentino Delle Rose and Cristóbal Rojas},
-      journal={Discrete Applied Mathematics (to appear)},
+      journal={Discrete Applied Mathematics},
       pdf={https://arxiv.org/pdf/2409.03113},
+      doi={10.1016/j.dam.2026.02.004},
+      year={2026},
+      volume={386},
+      pages={139-155},
       preview={paper.png},
       bibtex_show={true},
       arxiv={2409.03113},
