--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,6 +61,7 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
       preview={paper.png},
       bibtex_show={true},
       arxiv={2409.03113},
+      website={https://www.sciencedirect.com/science/article/pii/S0166218X26000697},
 }
 @article{carrascovargas2023characterization,
       title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
