--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,8 @@
       author={Nicanor Carrasco-Vargas},
       pdf={https://arxiv.org/pdf/2303.14820},
       journal={Groups, Geometry, and Dynamics},
-      year={2024},
-      pages={online first},
+      year={2026},
+      pages={307-340},
       preview={paper.png},
       bibtex_show={true},
       doi={DOI 10.4171/GGD/817},
